k8s/equifax/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  replicas: 12
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: database
        image: equifax/database:latest
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    app: database
  type: ClusterIP
  ports:
  - port: 22
    targetPort: 22
    protocol: TCP
